--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,146 @@
 /* Use your own code or past solution for Great Idea Web Page CSS here! */
 
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
 
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/* Set every element's box-sizing to border-box */
+* {
+    box-sizing: border-box;
+}
+
+html, body {
+    height: 100%;
+    font-family: 'Titillium Web', sans-serif;
+}
+
+h1, h2, h3, h4, h5 {
+    font-family: 'Bangers', cursive;
+    letter-spacing: 1px;
+    margin-bottom: 15px;
+}
+
+/* Your code starts here! */
+body {
+	width: 900px;
+	margin: 0 auto;
+	padding: 10px 20px;
+}
+.wrapper {
+	display: flex;
+	flex-direction: column;
+}
+header {
+	display: flex;
+	flex-direction: column;
+}
+.main-header {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: flex-start;
+	margin-bottom: 30px;
+}
+nav a {
+	text-decoration: none;
+	color: grey;
+	padding: 20px;
+}
+.subheader {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items:flex-start;
+	align-content: space-between;
+}
+.prompt {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+
+}
+.prompt h1 {
+	font-size: 4.5em;
+	text-align: center;
+	padding: 40px;
+	padding-bottom: 20px;
+}
+.prompt a {
+	text-decoration: none;
+	color: black;
+	border: 1px solid black;
+	width: 173px;
+	height: 35px;
+	text-align: center;
+	padding-top: 5px;
+	padding-bottom: 5px;
+}
+.content {
+	display: flex;
+	flex-direction: column;
+	line-height: 1.1em;
+	text-align: left;
+}
+
+.section-1 {
+	display: flex;
+	flex-direction: row;
+}
+.section-3 {
+	display: flex;
+	flex-direction: row;
+}
+.column-left, .column-center, .column-right {
+	width: 32.3%;
+	padding: 3px;
+}
+
+.copyright {
+	text-align: center;
+}
