--- a/css/index.css
+++ b/css/index.css
@@ -77,14 +77,28 @@ body {
 }
 header {
 	display: flex;
-	flex-direction: column;
+    flex-direction: column;
+    border-bottom: 2px solid black;
+    padding-bottom: 20px;
 }
+
 .main-header {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
 	align-items: flex-start;
 	margin-bottom: 30px;
+}
+@media (max-width: 800px) {
+    .main-header {
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: center;
+        justify-content: space-evenly;
+    }
+    .logo {
+        margin-bottom: 20px;
+    }
 }
 nav a {
 	text-decoration: none;
@@ -121,16 +135,32 @@ nav a {
 	padding-top: 5px;
 	padding-bottom: 5px;
 }
+
+@media (max-width: 800px) {
+    .banner {
+        display: none;
+    }
+}
+
 .content {
 	display: flex;
 	flex-direction: column;
 	line-height: 1.1em;
-	text-align: left;
+    text-align: left;
+    border-bottom: 2px solid black;
+    padding-bottom: 20px;
+    margin: 10px;
 }
 
 .section-1 {
 	display: flex;
 	flex-direction: row;
+}
+.img-container {
+    width: 100%;
+}
+.img-container img {
+    max-width: 100%;
 }
 .section-3 {
 	display: flex;
@@ -139,6 +169,9 @@ nav a {
 .column-left, .column-center, .column-right {
 	width: 32.3%;
 	padding: 3px;
+}
+address {
+    margin: 10px 20px;
 }
 
 .copyright {
