--- a/css/index.css
+++ b/css/index.css
@@ -100,17 +100,34 @@ header {
         margin-bottom: 20px;
     }
 }
+
 nav a {
 	text-decoration: none;
 	color: grey;
 	padding: 20px;
 }
+@media (max-width: 500px) {
+    .main-header {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+    .logo {
+        margin-bottom: 20px;
+    }
+    .main-header nav {
+        display: flex;
+        flex-direction: column
+    }
+    .main-header nav a {
+        border-top: 2px solid grey;
+    }
+}
 .subheader {
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
-	align-items:flex-start;
-	align-content: space-between;
+    align-items: flex-start;
+    padding: 20px;
 }
 .prompt {
 	display: flex;
@@ -156,9 +173,6 @@ nav a {
 	display: flex;
 	flex-direction: row;
 }
-.img-container {
-    width: 100%;
-}
 .img-container img {
     max-width: 100%;
 }
@@ -169,6 +183,29 @@ nav a {
 .column-left, .column-center, .column-right {
 	width: 32.3%;
 	padding: 3px;
+}
+@media (max-width: 500px) {
+    .content {
+        display: flex;
+        flex-direction: column;
+    }
+    .section-1, .section-2 {
+        display: flex;
+        flex-direction: column;
+        vertical-align: center;
+        align-items: space-between;
+    }
+    .left, .right {
+        padding: 5px;
+    }
+    .section-3 {
+        display: flex;
+        flex-direction: column;
+    }
+    .column-center, .column-right, .column-left{
+        width: 100%;
+        padding: 5px;
+    }
 }
 address {
     margin: 10px 20px;
